# intercept

./: Cargo.toml  Makefile  README.md
examples/: modify_initial_invite.json  modify_routing.json
nfqueue-rs/: Cargo.toml
nfqueue-rs/src/: lib.rs  message.rs
src/: error.rs  main.rs  rules.rs
src/net/: mod.rs
